--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -133,8 +133,8 @@ body {
 }
 
 #image_thumbnail {
-  width: 150px;
-  height: 150px;
+  max-width: 150px;
+  max-height: 150px;
 }
 
 #image_container {
