--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -1,27 +1,17 @@
-{% extends "auctions/layout.html" %}
+{% extends "auctions/layout.html" %} {% block body %}
 
-{% block body %}
-    <h2>Watchlist</h2>
-
-    <div>
-        {% if user.is_authenticated %}
-            {% if watchlist %}
-                <ul>
-                    {% for listing in watchlist %}
-                        <li id="list">
-                            <a href="{% url 'listing_detail' listing.id  %}">{{ listing.title }}</a>
-                            <div>
-                                &emsp;${{ listing.price }}
-                            </div>
-                            <div>
-                                &emsp;Closing time: {{ listing.closing_time }}
-                            </div>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                Your watchlist is empty
-            {% endif %}
-        {% endif %}
-    </div>
+<h2>Watchlist</h2>
+<div>
+  {% if user.is_authenticated %} {% if watchlist %}
+  <ul>
+    {% for listing in watchlist %}
+    <li id="list">
+      <a href="{% url 'listing_detail' listing.id  %}">{{ listing.title }}</a>
+      <div>&emsp;${{ listing.price }}</div>
+      <div>&emsp;Closing time: {{ listing.closing_time }}</div>
+    </li>
+    {% endfor %}
+  </ul>
+  {% else %} Your watchlist is empty {% endif %} {% endif %}
+</div>
 {% endblock %}
