--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -1,16 +1,13 @@
-{% extends "auctions/layout.html" %}
+{% extends "auctions/layout.html" %} {% block body %}
 
-{% block body %}
-    <h2>Categories</h2>
-    <ul>
-        {% for category in categories %}
-            {% if category.listings.count > 0 %}
-                <li>
-                    <div id="listing_block">
-                        <a href="{% url 'category_detail' category.id %}">{{ category.title }}</a>
-                    </div>
-                </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
+<h2>Categories</h2>
+<ul>
+  {% for category in categories %} {% if category.listings.count > 0 %}
+  <li>
+    <div id="listing_block">
+      <a href="{% url 'category_detail' category.id %}">{{ category.title }}</a>
+    </div>
+  </li>
+  {% endif %} {% endfor %}
+</ul>
 {% endblock %}
