--- a/auctions/templates/auctions/sell.html
+++ b/auctions/templates/auctions/sell.html
@@ -1,34 +1,35 @@
-{% extends "auctions/layout.html" %}
+{% extends "auctions/layout.html" %} {% block body %}
 
-{% block body %}
-    <h2>Sell Something!</h2>
-    {% if message %}
-        <div>
-            {{ message }}
-        </div>
-    {% endif %}
-    <div>
-        {% if user.is_authenticated %}
-            <form action="" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form.as_p}}
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        {% endif %}
-    </div>
+<h2>Sell Something!</h2>
+{% if message %}
+<div>{{ message }}</div>
+{% endif %}
+<div>
+  {% if user.is_authenticated %}
+  <form action="" method="POST" enctype="multipart/form-data">
+    {% csrf_token %} {{ form.as_p}}
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  {% endif %}
+</div>
 
-    <script>
-        document.getElementById('your_form_id').addEventListener('submit', function() {
-            const dateTimeInput = document.querySelector('input[type="datetime-local"]');
-            const localDateTime = new Date(dateTimeInput.value);
-    
-            // Convert the local time to UTC
-            const utcDateTime = new Date(localDateTime.getTime() + localDateTime.getTimezoneOffset() * 60000);
-    
-            // Format UTC time in the form yyyy-MM-ddTHH:mm for the datetime-local input
-            dateTimeInput.value = utcDateTime.toISOString().slice(0, 16);
-        });
-    </script>
-    
+<script>
+  document
+    .getElementById("your_form_id")
+    .addEventListener("submit", function () {
+      const dateTimeInput = document.querySelector(
+        'input[type="datetime-local"]'
+      );
+      const localDateTime = new Date(dateTimeInput.value);
+
+      // Convert the local time to UTC
+      const utcDateTime = new Date(
+        localDateTime.getTime() + localDateTime.getTimezoneOffset() * 60000
+      );
+
+      // Format UTC time in the form yyyy-MM-ddTHH:mm for the datetime-local input
+      dateTimeInput.value = utcDateTime.toISOString().slice(0, 16);
+    });
+</script>
+
 {% endblock %}
-
